Cleanup, Eclipse dependencies, better comments and explanations