@@ -1,3 +1,3 @@
 module moda {
-	// nothing exported
+	// nothing exported - package 'pkgainternal' will be accessible only with Runtime option --add-exports
 }
